# SMS

./: .gitignore  CMakeLists.txt  README.md  main.c  todo.md
modules/: CMakeLists.txt  console.c  console.h  menu.c  menu.h  path.c  path.h  storage.c  storage.h  student.c  student.h  utils.c  utils.h
